Latest build of target web.

--- a/knowl/fn-3.html
+++ b/knowl/fn-3.html
@@ -11,8 +11,12 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<div class="para">Python is an incredibly popular programming and as such, there are lot of different ways to write and run your programs. Most of these fall into 2 broad categoies either <em class="emphasis">Integrated Development Environment (IDE)</em>) or <em class="emphasis">Text Edtior + Terminal</em>. For right now, we'll focus on the IDE approach</div>
-<span class="incontext"><a href="chapter-5.html#p-2" class="internal">in-context</a></span>
+<div class="fn">
+<h4 class="heading">
+<span class="type">Footnote</span><span class="space"> </span><span class="codenumber">5.3</span><span class="period">.</span>
+</h4>
+<code class="code-inline tex2jax_ignore">en.wikipedia.org/wiki/%22Hello,_World!%22_program</code>
+</div>
+<span class="incontext"><a href="chapter-5.html#fn-3" class="internal">in-context</a></span>
 </body>
 </html>
