--- a/knowl/p-9.html
+++ b/knowl/p-9.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<div class="para">Python is an incredibly popular programming and as such, there are lot of different ways to write and run your programs. Most of these fall into 2 broad categoies either <em class="emphasis">Integrated Development Environment (IDE)</em>) or <em class="emphasis">Text Edtior + Terminal</em>. For right now, we'll focus on the IDE approach</div>
-<span class="incontext"><a href="chapter-5.html#p-2" class="internal">in-context</a></span>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<div class="para">This is actaully a pretty good set of rules to help guide you when naming variables in any programming language. Some languages are less restrictive, and some may have occassional odd rules (like not being case sensitive), but if you're learning a new language and stick to theses guidelines, you'll probbaly be safe.</div>
+<span class="incontext"><a href="chapter-5.html#p-9" class="internal">in-context</a></span>
 </body>
 </html>
