--- a/colophon-1.html
+++ b/colophon-1.html
@@ -62,38 +62,6 @@ window.MathJax = {
 <link href="https://pretextbook.org/css/0.6/style_default.css" rel="stylesheet" type="text/css">
 <link href="https://pretextbook.org/css/0.6/colors_blue_red.css" rel="stylesheet" type="text/css">
 <link href="https://pretextbook.org/css/0.6/setcolors.css" rel="stylesheet" type="text/css">
-<!--** eBookCongig is necessary to configure interactive       **-->
-<!--** Runestone components to run locally in reader's browser **-->
-<!--** No external communication:                              **-->
-<!--**     log level is 0, Runestone Services are disabled     **-->
-<script type="text/javascript">
-eBookConfig = {};
-eBookConfig.useRunestoneServices = false;
-eBookConfig.host = 'http://127.0.0.1:8000';
-eBookConfig.course = 'PTX_Course_Title_Here';
-eBookConfig.basecourse = 'PTX_Base_Course';
-eBookConfig.isLoggedIn = false;
-eBookConfig.email = '';
-eBookConfig.isInstructor = false;
-eBookConfig.logLevel = 0;
-eBookConfig.username = '';
-eBookConfig.readings = null;
-eBookConfig.activities = null;
-eBookConfig.downloadsEnabled = false;
-eBookConfig.allow_pairs = false;
-eBookConfig.enableScratchAC = true;
-eBookConfig.acDefaultLanguage = 'python';
-eBookConfig.build_info = "";
-eBookConfig.python3 = null;
-eBookConfig.runestone_version = '5.0.1';
-eBookConfig.jobehost = '';
-eBookConfig.proxyuri_runs = '';
-eBookConfig.proxyuri_files = '';
-eBookConfig.enable_chatcodes =  false;
-</script>
-<!--*** Runestone Services ***-->
-<script type="text/javascript" src="https://runestone.academy/cdn/runestone/6.5.0/runtime.ead78978a4e3c14b.bundle.js"></script><script type="text/javascript" src="https://runestone.academy/cdn/runestone/6.5.0/637.d54be67956c5c660.bundle.js"></script><script type="text/javascript" src="https://runestone.academy/cdn/runestone/6.5.0/runestone.9ae535a5cdffdcb5.bundle.js"></script><link rel="stylesheet" type="text/css" href="https://runestone.academy/cdn/runestone/6.5.0/637.0fa6cababf056764.css">
-<link rel="stylesheet" type="text/css" href="https://runestone.academy/cdn/runestone/6.5.0/runestone.828206f80e9e88d8.css">
 </head>
 <body class="pretext book ignore-math">
 <a class="assistive" href="#ptx-content">Skip to main content</a><header id="ptx-masthead"><div class="ptx-banner">
@@ -233,7 +201,17 @@ eBookConfig.enable_chatcodes =  false;
 <div class="toc-item"><a href="part-2.html" class="internal"><span class="codenumber">II</span> <span class="title">Python!</span></a></div>
 <ul class="structural"><li>
 <div class="toc-item"><a href="chapter-5.html" class="internal"><span class="codenumber">5</span> <span class="title">Python!</span></a></div>
-<ul class="structural"><li><div class="toc-item"><a href="chapter-5.html#section-1" class="internal"><span class="codenumber">5.1</span> <span class="title">The Basics</span></a></div></li></ul>
+<ul class="structural">
+<li><div class="toc-item"><a href="chapter-5.html#section-1" class="internal"><span class="codenumber">5.1</span> <span class="title">Programming Environment</span></a></div></li>
+<li><div class="toc-item"><a href="chapter-5.html#section-2" class="internal"><span class="codenumber">5.2</span> <span class="title">Getting Started</span></a></div></li>
+<li>
+<div class="toc-item"><a href="chapter-5.html#section-3" class="internal"><span class="codenumber">5.3</span> <span class="title">Values &amp; Varaiables</span></a></div>
+<ul class="structural">
+<li><div class="toc-item"><a href="chapter-5.html#subsection-1" class="internal"><span class="codenumber">5.3.1</span> <span class="title">Literal Valuse</span></a></div></li>
+<li><div class="toc-item"><a href="chapter-5.html#subsection-2" class="internal"><span class="codenumber">5.3.2</span> <span class="title">Variables</span></a></div></li>
+</ul>
+</li>
+</ul>
 </li></ul>
 </li>
 <li><div class="toc-item"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
@@ -241,7 +219,7 @@ eBookConfig.enable_chatcodes =  false;
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="colophon" id="colophon-1"><h2 class="heading hide-type">
 <span class="type">Colophon</span> <span class="codenumber"></span> <span class="title">Colophon</span>
 </h2>
-<div class="para" id="p-2">This book was authored in PreTeXt.</div></section></div>
+<div class="para" id="p-10">This book was authored in PreTeXt.</div></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="backmatter.html" title="Previous"><span class="icon">&lt;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon">^</span><span class="name">Top</span></a><span class="next-button button disabled"><span class="name">Next</span><span class="icon">&gt;</span></span>
 </div></main>
