--- a/knowl/li-7.html
+++ b/knowl/li-7.html
@@ -11,8 +11,9 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<div class="para">Python is an incredibly popular programming and as such, there are lot of different ways to write and run your programs. Most of these fall into 2 broad categoies either <em class="emphasis">Integrated Development Environment (IDE)</em>) or <em class="emphasis">Text Edtior + Terminal</em>. For right now, we'll focus on the IDE approach</div>
-<span class="incontext"><a href="chapter-5.html#p-2" class="internal">in-context</a></span>
+<article class="li"><h5 class="heading">
+<span class="type">Item</span><span class="period">.</span>
+</h5>
+<em class="emphasis">Integers</em>: Numbers (positive or negative), without a <code class="code-inline tex2jax_ignore">.</code>. e.g. <code class="code-inline tex2jax_ignore">33</code>, <code class="code-inline tex2jax_ignore">-24601</code></article><span class="incontext"><a href="chapter-5.html#li-7" class="internal">in-context</a></span>
 </body>
 </html>
