--- a/knowl/p-5.html
+++ b/knowl/p-5.html
@@ -12,7 +12,9 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<div class="para">Python is an incredibly popular programming and as such, there are lot of different ways to write and run your programs. Most of these fall into 2 broad categoies either <em class="emphasis">Integrated Development Environment (IDE)</em>) or <em class="emphasis">Text Edtior + Terminal</em>. For right now, we'll focus on the IDE approach</div>
-<span class="incontext"><a href="chapter-5.html#p-2" class="internal">in-context</a></span>
+<div class="para">When run, you should see this: <div class="code-box" style="width: 100%; margin-left: 0%; margin-right: 0%;"><pre class="console">Good News Everyone!
+</pre></div>
+</div>
+<span class="incontext"><a href="chapter-5.html#p-5" class="internal">in-context</a></span>
 </body>
 </html>
