Latest build of target web.

--- a/knowl/p-7.html
+++ b/knowl/p-7.html
@@ -11,21 +11,18 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
 <div class="para logical">
-<div class="para">In code, a <em class="emphasis">literal value</em> is something whose value is exactly as it appears in code. For example, when you see a <code class="code-inline tex2jax_ignore">51</code> in code, you know it represents the numeric value 51, you cannot assign it another value, or change it in any way. There are a few literal data types in Python, this is a good list to get started with:</div>
+<div class="para">With that out of the way, we can now focus on the common programming tools that we have seen before in Racket and NetLogo, so we can start Python on some familiar ground. Here's a reasonable list of things that could be done in both langauges:</div>
 <ul class="disc">
-<li><div class="para">
-<em class="emphasis">Integers</em>: Numbers (positive or negative), without a <code class="code-inline tex2jax_ignore">.</code>. e.g. <code class="code-inline tex2jax_ignore">33</code>, <code class="code-inline tex2jax_ignore">-24601</code>
-</div></li>
-<li><div class="para">
-<em class="emphasis">Float Points</em>: Numbers (positive or negative) that contain a <code class="code-inline tex2jax_ignore">.</code> (no numbers should have <code class="code-inline tex2jax_ignore">,</code>s). e.g. <code class="code-inline tex2jax_ignore">6.022</code>
-</div></li>
-<li><div class="para">
-<em class="emphasis">Strings</em>: A series of characters placed inside quatation marks. In python, you can enclose single line strings in double quotes <code class="code-inline tex2jax_ignore">""</code> or single quotes <code class="code-inline tex2jax_ignore">''</code>, there is no difference between the two. If you want to have a multi-line string, you can use triple-double quotes <code class="code-inline tex2jax_ignore">""" """</code>. We'll go into much more detail on strings later.</div></li>
-<li><div class="para">
-<em class="emphasis">Boolean Values</em>: In python, booleans are represented as <code class="code-inline tex2jax_ignore">True</code> and <code class="code-inline tex2jax_ignore">False</code>.</div></li>
+<li><div class="para">Perform arithmetic operations on numbers.</div></li>
+<li><div class="para">Perform comparason operations on numbers.</div></li>
+<li><div class="para">Use boolean (<em class="emphasis">True, False</em>) values, perform boolean operations.</div></li>
+<li><div class="para">Make program decisions using conditional statements.</div></li>
+<li><div class="para">Write out own functions.</div></li>
+<li><div class="para">Run sections of code repeatedly.</div></li>
 </ul>
+<div class="para">We will look at all these tools in the next section, whith a slight detour at the beginning to discuss  values, variables and data types.</div>
 </div>
 <span class="incontext"><a href="chapter-5.html#p-7" class="internal">in-context</a></span>
 </body>
