--- a/knowl/p-8.html
+++ b/knowl/p-8.html
@@ -13,13 +13,19 @@
 <body class="ignore-math">
 <h5 class="heading"><span class="type">Paragraph</span></h5>
 <div class="para logical">
-<div class="para">A <em class="emphasis">variable</em> is a value that can (potentially) change while a program as runnning (as opposed to literals). Becuase variables can change, there are two different parts of any variable; its <em class="emphasis">name</em> and its <em class="emphasis">value</em>. A variable's name is important becuase it will allow us to keep track of the same piece of data regardless of how its value changes over time. Here are the rules for variable names in Python:</div>
+<div class="para">In code, a <em class="emphasis">literal value</em> is something whose value is exactly as it appears in code. For example, when you see a <code class="code-inline tex2jax_ignore">51</code> in code, you know it represents the numeric value 51, you cannot assign it another value, or change it in any way. There are a few literal data types in Python, this is a good list to get started with:</div>
 <ul class="disc">
-<li><div class="para">Names can only contain upper (<code class="code-inline tex2jax_ignore">A-Z</code>) and lower (<code class="code-inline tex2jax_ignore">a-z</code>) case letters, digits (<code class="code-inline tex2jax_ignore">0-9</code>) and underscores (<code class="code-inline tex2jax_ignore">_</code>). Notable, this means no spaces in names!</div></li>
-<li><div class="para">Names cannot <em class="emphasis">start</em> with numeric digits.</div></li>
-<li><div class="para">Names are case sensitive. i.e. <code class="code-inline tex2jax_ignore">ypos</code> and <code class="code-inline tex2jax_ignore">yPos</code> would be two different variables.</div></li>
+<li><div class="para">
+<em class="emphasis">Integers</em>: Numbers (positive or negative), without a <code class="code-inline tex2jax_ignore">.</code>. e.g. <code class="code-inline tex2jax_ignore">33</code>, <code class="code-inline tex2jax_ignore">-24601</code>
+</div></li>
+<li><div class="para">
+<em class="emphasis">Float Points</em>: Numbers (positive or negative) that contain a <code class="code-inline tex2jax_ignore">.</code> (no numbers should have <code class="code-inline tex2jax_ignore">,</code>s). e.g. <code class="code-inline tex2jax_ignore">6.022</code>
+</div></li>
+<li><div class="para">
+<em class="emphasis">Strings</em>: A series of characters placed inside quatation marks. In python, you can enclose single line strings in double quotes <code class="code-inline tex2jax_ignore">""</code> or single quotes <code class="code-inline tex2jax_ignore">''</code>, there is no difference between the two. If you want to have a multi-line string, you can use triple-double quotes <code class="code-inline tex2jax_ignore">""" """</code>. We'll go into much more detail on strings later.</div></li>
+<li><div class="para">
+<em class="emphasis">Boolean Values</em>: In python, booleans are represented as <code class="code-inline tex2jax_ignore">True</code> and <code class="code-inline tex2jax_ignore">False</code>.</div></li>
 </ul>
-<div class="para"><aside class="aside aside-like"><div class="para">This is actaully a pretty good set of rules to help guide you when naming variables in any programming language. Some languages are less restrictive, and some may have occassional odd rules (like not being case sensitive), but if you're learning a new language and stick to theses guidelines, you'll probbaly be safe.</div></aside></div>
 </div>
 <span class="incontext"><a href="chapter-5.html#p-8" class="internal">in-context</a></span>
 </body>
