--- a/knowl/p-11.html
+++ b/knowl/p-11.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<div class="para">This is actaully a pretty good set of rules to help guide you when naming variables in any programming language. Some languages are less restrictive, and some may have occassional odd rules (like not being case sensitive), but if you're learning a new language and stick to theses guidelines, you'll probbaly be safe.</div>
-<span class="incontext"><a href="chapter-5.html#p-10" class="internal">in-context</a></span>
+<h2 class="heading"><span class="type">Paragraph</span></h2>
+<div class="para">This book was authored in PreTeXt.</div>
+<span class="incontext"><a href="colophon-1.html#p-11" class="internal">in-context</a></span>
 </body>
 </html>
