Latest build of target web.

--- a/knowl/p-11.html
+++ b/knowl/p-11.html
@@ -11,8 +11,9 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h2 class="heading"><span class="type">Paragraph</span></h2>
-<div class="para">This book was authored in PreTeXt.</div>
-<span class="incontext"><a href="colophon-1.html#p-11" class="internal">in-context</a></span>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<div class="para">A variable can represent any kind of data, and we call the kind of data that a variable refers to its <em class="emphasis">type</em>. When you assign a value to a variable, you are also giving that variable a type. In the example above the variable <code class="code-inline tex2jax_ignore">top_score</code> is given the value <code class="code-inline tex2jax_ignore">100</code>, which also means that <code class="code-inline tex2jax_ignore">top_score</code> is an <em class="emphasis">integer</em> type. <aside class="aside aside-like"><div class="para">Technically, this is called <em class="emphasis">dynamic</em> typing. That is to say Python figures out the type for your variables while the program is running. This is in contrast to other langauges (like Java, for example), where you have to explicitely declare the type for any variable before you use it. That is called <em class="emphasis">static</em> typing.</div></aside>
+</div>
+<span class="incontext"><a href="chapter-5.html#p-11" class="internal">in-context</a></span>
 </body>
 </html>
