--- a/knowl/p-9.html
+++ b/knowl/p-9.html
@@ -13,13 +13,16 @@
 <body class="ignore-math">
 <h5 class="heading"><span class="type">Paragraph</span></h5>
 <div class="para logical">
-<div class="para">A <em class="emphasis">variable</em> is a value that can (potentially) change while a program as runnning (as opposed to literals). Becuase variables can change, there are two different parts of any variable; its <em class="emphasis">name</em> and its <em class="emphasis">value</em>. A variable's name is important becuase it will allow us to keep track of the same piece of data regardless of how its value changes over time. Here are the rules for variable names in Python:</div>
+<div class="para">A <em class="emphasis">variable</em> is a value that can (potentially) change while a program as runnning (as opposed to literals). Becuase variables can change, there are two different parts of any variable; its <em class="emphasis">name</em> and its <em class="emphasis">value</em>. When you need a variable in Python, you just type the name you want to give it, and <em class="emphasis">assign</em> it a value using <code class="code-inline tex2jax_ignore">=</code>. Here are a few examples of variable creation &amp; assignment: <div class="code-box" style="width: 100%; margin-left: 0%; margin-right: 0%;"><pre class="program"><code class="language-py">s = "ahoy!"
+fred = True
+top_score = 100
+</code></pre></div> A variable's name is important becuase it will allow us to keep track of the same piece of data regardless of how its value changes over time. Here are the rules for variable names in Python: <aside class="aside aside-like"><div class="para">This is actaully a pretty good set of rules to help guide you when naming variables in any programming language. Some languages are less restrictive, and some may have occassional odd rules (like not being case sensitive), but if you're learning a new language and stick to theses guidelines, you'll probbaly be safe.</div></aside>
+</div>
 <ul class="disc">
 <li><div class="para">Names can only contain upper (<code class="code-inline tex2jax_ignore">A-Z</code>) and lower (<code class="code-inline tex2jax_ignore">a-z</code>) case letters, digits (<code class="code-inline tex2jax_ignore">0-9</code>) and underscores (<code class="code-inline tex2jax_ignore">_</code>). Notable, this means no spaces in names!</div></li>
 <li><div class="para">Names cannot <em class="emphasis">start</em> with numeric digits.</div></li>
 <li><div class="para">Names are case sensitive. i.e. <code class="code-inline tex2jax_ignore">ypos</code> and <code class="code-inline tex2jax_ignore">yPos</code> would be two different variables.</div></li>
 </ul>
-<div class="para"><aside class="aside aside-like"><div class="para">This is actaully a pretty good set of rules to help guide you when naming variables in any programming language. Some languages are less restrictive, and some may have occassional odd rules (like not being case sensitive), but if you're learning a new language and stick to theses guidelines, you'll probbaly be safe.</div></aside></div>
 </div>
 <span class="incontext"><a href="chapter-5.html#p-9" class="internal">in-context</a></span>
 </body>
