--- a/colophon-1.html
+++ b/colophon-1.html
@@ -207,8 +207,9 @@ window.MathJax = {
 <li>
 <div class="toc-item"><a href="chapter-5.html#section-3" class="internal"><span class="codenumber">5.3</span> <span class="title">Values &amp; Varaiables</span></a></div>
 <ul class="structural">
-<li><div class="toc-item"><a href="chapter-5.html#subsection-1" class="internal"><span class="codenumber">5.3.1</span> <span class="title">Literal Valuse</span></a></div></li>
+<li><div class="toc-item"><a href="chapter-5.html#subsection-1" class="internal"><span class="codenumber">5.3.1</span> <span class="title">Literal Values</span></a></div></li>
 <li><div class="toc-item"><a href="chapter-5.html#subsection-2" class="internal"><span class="codenumber">5.3.2</span> <span class="title">Variables</span></a></div></li>
+<li><div class="toc-item"><a href="chapter-5.html#subsection-3" class="internal"><span class="codenumber">5.3.3</span> <span class="title">Variable Types</span></a></div></li>
 </ul>
 </li>
 </ul>
@@ -219,7 +220,7 @@ window.MathJax = {
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="colophon" id="colophon-1"><h2 class="heading hide-type">
 <span class="type">Colophon</span> <span class="codenumber"></span> <span class="title">Colophon</span>
 </h2>
-<div class="para" id="p-11">This book was authored in PreTeXt.</div></section></div>
+<div class="para" id="p-16">This book was authored in PreTeXt.</div></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="backmatter.html" title="Previous"><span class="icon">&lt;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon">^</span><span class="name">Top</span></a><span class="next-button button disabled"><span class="name">Next</span><span class="icon">&gt;</span></span>
 </div></main>
