Latest build of target web.

--- a/colophon-1.html
+++ b/colophon-1.html
@@ -212,6 +212,9 @@ window.MathJax = {
 <li><div class="toc-item"><a href="chapter-5.html#subsection-3" class="internal"><span class="codenumber">5.3.3</span> <span class="title">Variable Types</span></a></div></li>
 </ul>
 </li>
+<li><div class="toc-item"><a href="chapter-5.html#section-4" class="internal"><span class="codenumber">5.4</span> <span class="title">Arithmetic Operations</span></a></div></li>
+<li><div class="toc-item"><a href="chapter-5.html#section-5" class="internal"><span class="codenumber">5.5</span> <span class="title">Comparason Operations</span></a></div></li>
+<li><div class="toc-item"><a href="chapter-5.html#section-6" class="internal"><span class="codenumber">5.6</span> <span class="title">Boolean Operations</span></a></div></li>
 </ul>
 </li></ul>
 </li>
@@ -220,7 +223,7 @@ window.MathJax = {
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="colophon" id="colophon-1"><h2 class="heading hide-type">
 <span class="type">Colophon</span> <span class="codenumber"></span> <span class="title">Colophon</span>
 </h2>
-<div class="para" id="p-16">This book was authored in PreTeXt.</div></section></div>
+<div class="para" id="p-21">This book was authored in PreTeXt.</div></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="backmatter.html" title="Previous"><span class="icon">&lt;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon">^</span><span class="name">Top</span></a><span class="next-button button disabled"><span class="name">Next</span><span class="icon">&gt;</span></span>
 </div></main>
