--- a/knowl/p-16.html
+++ b/knowl/p-16.html
@@ -11,8 +11,21 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h2 class="heading"><span class="type">Paragraph</span></h2>
-<div class="para">This book was authored in PreTeXt.</div>
-<span class="incontext"><a href="colophon-1.html#p-16" class="internal">in-context</a></span>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<div class="para logical">
+<div class="para">Back to our list of programming tools we've used before, the first item was <em class="emphasis">Perform arithmetic operations on numbers</em>. We took a slight detour to discuss variables and types, largely because those things will be useful in demonstrating the other programming tools. Python has the same basic arithmetic operations as Racket and NetLogo, namely:</div>
+<ul class="disc">
+<li><div class="para">
+<code class="code-inline tex2jax_ignore">+</code> for addition</div></li>
+<li><div class="para">
+<code class="code-inline tex2jax_ignore">-</code> for subtraction</div></li>
+<li><div class="para">
+<code class="code-inline tex2jax_ignore">*</code> for multiplication</div></li>
+<li><div class="para">
+<code class="code-inline tex2jax_ignore">/</code> for division</div></li>
+</ul>
+<div class="para">These operations work as you would expect. If you have two number values (either literals or variables), you can perform an operation on them using infix notataion (i.e. <code class="code-inline tex2jax_ignore">x + 5</code>, <code class="code-inline tex2jax_ignore">9.76 - 4</code>).</div>
+</div>
+<span class="incontext"><a href="chapter-5.html#p-16" class="internal">in-context</a></span>
 </body>
 </html>
